# zigbee2mqtt-health

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dependabot.yml  lint_test.yaml  publish.yaml
docker/: Dockerfile  entrypoint.sh  healthcheck.sh
src/zigbee2mqtt_health/: config.py  main.py  utils.py
tests/: client.py  conftest.py  test_liveness.py  test_main.py  test_utils.py
tests/e2e/: test_main.py
tests/unit/: conftest.py  test_config.py  test_main.py
zigbee2mqtt_health/: config.py  liveness.py  main.py
